Update passwords folder to contain a password file for each level. Also, update write-up file for 2-3.md.

--- a/bandit/.template.md
+++ b/bandit/.template.md
@@ -1,13 +1,12 @@
-# Bandit Level 0-1 Write-Up
+# Bandit Level [x-y] Write-Up
 
 ---
 
 ## About 
 
-[https://overthewire.org/wargames/bandit/bandit1.html](https://overthewire.org/wargames/bandit/bandit1.html)
+[https://overthewire.org/wargames/bandit/bandit[x].html](https://overthewire.org/wargames/bandit/bandit[x].html)
 
-The first level of the Bandit wargame is designed to get you accustomed
-to the command line, and the SSH protocol.
+[...]
 
 ---
 
@@ -27,9 +26,7 @@ to the command line, and the SSH protocol.
 `$ ls`
 
 
-3. Open/read the `readme.txt` file:
-
-`$ cat readme.txt`
+3. [...]
 
 
 4. Copy the password to your clipboard
@@ -41,6 +38,8 @@ to the command line, and the SSH protocol.
 
 `Ctrl-D`
 
+
+6. Paste the username and password into your `passwds.txt` file
 
 ---
 
