--- a/bandit/write_ups/4-5.md
+++ b/bandit/write_ups/4-5.md
@@ -1,25 +1,27 @@
-# Bandit Level 2-3 Write-Up
+# Bandit Level 4-5 Write-Up
 
 ---
 
 ## About
 
-[Level 2-3 Page](https://overthewire.org/wargames/bandit/bandit2.html)
+[Level 4-5 Page](https://overthewire.org/wargames/bandit4.html)
+
+[...]
 
 ---
 
-## Steps 
+## Steps
 
 1. Log into the server:
 
 *If you followed the shortcut instructions in `pre-req.md`:*
 
-`$ ssh bandit0@otw`
+`$ ssh bandit4@otw`
 
 
 *If not:*
 
-`$ ssh bandit0@bandit.labs.overthewire.org -p 2220`
+`$ ssh bandit4@bandit.labs.overthewire.org -p 2220`
 
 
 2.   [...]
